# meta-magic_mount

./: .gitignore  Cargo.toml  README.md  README_en.md  build.rs  cliff.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
module/: daemonize-mmrs
src/: Cargo.toml  config.rs  defs.rs  main.rs  scanner.rs  utils.rs
src/magic_mount/: mod.rs  node.rs  try_umount.rs  utils.rs
src/src/: config.rs  main.rs
src/try_umount/: kernel.rs  mod.rs
template/: config.toml  customize.sh  metainstall.sh  metamount.sh  uninstall.sh
update/: changelog.md  update.json
webui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts
webui/src/: App.svelte  App.tsx  app.css  index.css  layout.css  locate.json  main.js
webui/src/components/: BottomActions.svelte  ChipInput.svelte  NavBar.css  NavBar.svelte  Skeleton.css  Skeleton.svelte  Toast.css  Toast.svelte  TopBar.css  TopBar.svelte
webui/src/lib/: api.js  api.mock.js  constants.js  store.svelte.js  theme.js
webui/src/locales/: en.json  zh.json
webui/src/routes/: ConfigTab.css  ConfigTab.svelte  InfoTab.css  InfoTab.svelte  LogsTab.css  LogsTab.svelte  ModulesTab.css  ModulesTab.svelte  StatusTab.css  StatusTab.svelte
