[workspace]
members = ["xtask"]

[package]
name = "magic_mount_rs"
version = "1.2.1"
edition = "2024"
description = "An implementation of a metamodule using Magic Mount, Based on MKSU, Template is from meta-overlay."
authors = ["7a72", "Tools-cx-app", "YuzakiKokuban"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/Tools-cx-app/meta-magic_mount/"

[package.metadata.magic_mount_rs]
name = "Magic Mount-rs"
update = "https://github.com/Tools-cx-app/meta-magic_mount/raw/master/update/update.json"

[dependencies]
anyhow = "1"
extattr = "1"
log = "0.4"
rustix = { version = "1.1", features = ["fs", "mount"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
env_logger = "0.11.8"
mimalloc = { version = "0.1.48", features = ["no_thp", "override"] }

[build-dependencies]
anyhow = "1.0.100"
toml = "0.9.8"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
