[package]
name = "magic_mount_rs"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
extattr = "1"
log = "0.4"
simplelog = "0.12"
rustix = { version = "0.38", features = ["fs", "mount"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
